Fix table wrapping

--- a/docs/_static/style.css
+++ b/docs/_static/style.css
@@ -804,6 +804,7 @@ dd {
 
 table.docutils {
   width: 100%;
+  table-layout: fixed;
 }
 
 table.docutils.footnote {
@@ -828,6 +829,7 @@ table.docutils tbody tr td {
   border-top: solid 1px var(--table-border);
   padding: 7px 5px;
   vertical-align: top;
+  overflow-wrap: break-word;
 }
 table.docutils tbody tr:last-child th,
 table.docutils tbody tr:last-child td {
